--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -57,9 +57,14 @@
   margin: 0;
   position: relative;
   font-weight: normal;
+  z-index: 0;
 }
 
+
 body {
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
