--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,19 +1,26 @@
 @import "./base.css";
 
+
+
+
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 1580px;
+  width: 1300px;
+  height: 50%;
+  /* margin: 0 auto; */
+  padding: 3rem;
 
   font-weight: normal;
+  background-color: red;
+  border-radius: 20px;
 }
 
-a,
+/* a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
-}
+} */
 
 @media (hover: hover) {
   a:hover {
@@ -29,7 +36,20 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    padding: 0 2rem;
+  }
+}
+
+@media (min-width: 700px) {
+  body {
+    display: flex;
+    place-items: center;
+  }
+
+  #app {
+    display: grid;
+    grid-template-columns: 1fr;
     padding: 0 2rem;
   }
 }
