--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,11 @@
-@import "./base.css";
-
-
-
+/* @import "./base.css"; */
 
 #app {
   max-width: 1580px;
-  width: 1300px;
-  height: 80vh;
+  /* width: 1300px; */
+  /* height: 80vh; */
   /* margin: 0 auto; */
-  padding: 3rem;
+  /* padding: 3rem; */
 
   font-weight: normal;
   background-color: red;
@@ -18,42 +15,13 @@
   border-radius: 20px;
 }
 
-/* a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-} */
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+body {
+  /* display: flex; */
+  /* flex-direction: row; */
+  justify-content: center;
+  align-items: center;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-color: blue;
-    padding: 0 2rem;
-  }
-}
 
-@media (min-width: 700px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr;
-    padding: 0 2rem;
-  }
-}
